# frontend-coffe-pos

./: .dockerignore  .env.example  .gitignore  Dockerfile  FrontendTask.md  README.md  alembic.ini  docker-compose.yml  main.py  philo_coffee.db-shm  philo_coffee.db-wal  pyproject.toml  vercel.json
.github/workflows/: docs.yml
alembic/: env.py
alembic/versions/: 2dc8b42456eb_initial_schema.py
app/: __init__.py  config.py  database.py  main.py
app/api/v1/: addons.py  categories.py  customers.py  dashboard.py  (+6 more)
app/middleware/: __init__.py  audit.py  request_logging.py
app/models/: __init__.py  addon.py  audit_log.py  category.py  customer.py  discount.py  expense.py  item.py  order.py  shift.py
app/schemas/: __init__.py  addon.py  category.py  common.py  customer.py  dashboard.py  discount.py  expense.py  item.py  order.py  shift.py
app/seed/: __init__.py  __main__.py  seed_data.py
app/services/: __init__.py  addon_service.py  category_service.py  customer_service.py  dashboard_service.py  discount_service.py  expense_service.py  item_service.py  order_service.py  shift_service.py
app/utils/: __init__.py  filters.py  logger.py  pagination.py
data/: philo_coffee.db
docs/: architecture.rst  conf.py  index.rst  setup.rst
docs/api/: endpoints.rst  schemas.rst
philo-pos-frontend-task/: README.md  index.html  package-lock.json  package.json  vite.config.ts
philo-pos-frontend-task/src/: App.tsx
philo-pos-frontend-task/tests/: cart.test.tsx  cartCalculations.test.ts  dashboard.test.tsx  dateFilter.test.ts  orderStatus.test.ts  orders.test.tsx  setup.ts
(+36 files in other folders)
